[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdensities"
version = "0.0.1"
authors = [
  { name="Alessandro Lupo", email="alessandro.lupo@cpt.univ-mrs.fr" },
  { name="Niccolo' Forzano", email="2227764@swansea.ac.uk" },
]
description = "lsdensities: Lattice spectral densities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "mpmath",
    "scipy",
    "matplotlib",
    "progressbar",
]

[project.urls]
Homepage = "https://github.com/LupoA/lsdensities"
Issues = "https://github.com/LupoA/lsdensities/issues/"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "SIM"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
